NM-2074-fix-ie-search-field-issues
* fix IE search field too narrow issue
* fix IE search field could not be submitted on enter

--- a/app/assets/stylesheets/instance_admin/locales.css.scss
+++ b/app/assets/stylesheets/instance_admin/locales.css.scss
@@ -36,6 +36,7 @@
       input {
         padding: 0 35px 0 10px;
         line-height: 30px;
+        height: 30px;
         width: 100%;
       }
       .fa {
